--- a/Synthetic Sound Demo/Pad Layout.html
+++ b/Synthetic Sound Demo/Pad Layout.html
@@ -12,23 +12,26 @@
     <br />
     <br />
     <br />
-    <div class="pad-container">
-        <div class="pad-item" value="1">1</div>
-        <div class="pad-item" value="2">2</div>
-        <div class="pad-item" value="3">3</div>
-        <div class="pad-item" value="4">4</div>
-        <div class="pad-item" value="5">5</div>
-        <div class="pad-item" value="6">6</div>
-        <div class="pad-item" value="7">7</div>
-        <div class="pad-item" value="8">8</div>
-        <div class="pad-item" value="9">9</div>
-        <div class="pad-item" value="10">10</div>
-        <div class="pad-item" value="11">11</div>
-        <div class="pad-item" value="12">12</div>  
-        <div class="pad-item" value="13">13</div>
-        <div class="pad-item" value="14">14</div>
-        <div class="pad-item" value="15">15</div>
-        <div class="pad-item" value="16">16</div>
+    <div class="container">
+        <div class="pad-container">
+            <!-- <h2>Vice City</h2> -->
+            <div class="pad-item" value="1">1</div>
+            <div class="pad-item" value="2">2</div>
+            <div class="pad-item" value="3">3</div>
+            <div class="pad-item" value="4">4</div>
+            <div class="pad-item" value="5">5</div>
+            <div class="pad-item" value="6">6</div>
+            <div class="pad-item" value="7">7</div>
+            <div class="pad-item" value="8">8</div>
+            <div class="pad-item" value="9">9</div>
+            <div class="pad-item" value="10">10</div>
+            <div class="pad-item" value="11">11</div>
+            <div class="pad-item" value="12">12</div>  
+            <div class="pad-item" value="13">13</div>
+            <div class="pad-item" value="14">14</div>
+            <div class="pad-item" value="15">15</div>
+            <div class="pad-item" value="16">16</div>
+        </div>
     </div>
 </body>
 </html>
