--- a/Synthetic Sound Demo/Pad Layout.html
+++ b/Synthetic Sound Demo/Pad Layout.html
@@ -11,7 +11,6 @@
     <p>This is a demo of audio being played from the click of a pad.</p>
     <br />
     <br />
-    <br />
     <div class="container">
 
         <div class="pack-name">
@@ -44,6 +43,16 @@
 
         <div class="video"></div>
 
+        <div class="pad-buttons">
+            <button type="button" class="play"><strong>PLAY</strong></button>
+            <button type="button" class="stop"><strong>STOP</strong></button>
+            <button type="button" class="forward"><strong>NEXT</strong></button>
+            <button type="button" class="backward"><strong>BACK</strong></button>
+            <button type="button" class="pause"><strong>PAUSE</strong></button>
+            <button type="button" class="save"><strong>SAVE</strong></button>
+            <button type="button" class="add"><strong>ADD</strong></button>
+        </div>
+        
         <div class="footer">Programmed by Synthetic Studios&reg; 2024.</div>
         
     </div>
