--- a/Synthetic Sound Demo/Pad Layout.html
+++ b/Synthetic Sound Demo/Pad Layout.html
@@ -14,7 +14,7 @@
     <div class="container">
 
         <div class="pack-name">
-            <h2>Vice City. <strong>prod. by ZEEK</strong></h2>
+            <h2><span>Vice City. </span><strong>prod. by ZEEK</strong></h2>
         </div>
 
         <div class="pad-header">
@@ -23,22 +23,22 @@
         </div>
         
         <div class="pad-container">
-            <div class="pad-item" value="1">1</div>
-            <div class="pad-item" value="2">2</div>
-            <div class="pad-item" value="3">3</div>
-            <div class="pad-item" value="4">4</div>
-            <div class="pad-item" value="5">5</div>
-            <div class="pad-item" value="6">6</div>
-            <div class="pad-item" value="7">7</div>
-            <div class="pad-item" value="8">8</div>
-            <div class="pad-item" value="9">9</div>
-            <div class="pad-item" value="10">10</div>
-            <div class="pad-item" value="11">11</div>
-            <div class="pad-item" value="12">12</div>  
-            <div class="pad-item" value="13">13</div>
-            <div class="pad-item" value="14">14</div>
-            <div class="pad-item" value="15">15</div>
-            <div class="pad-item" value="16">16</div>
+            <div class="pad-item" value="1"><strong>1</strong></div>
+            <div class="pad-item" value="2"><strong>2</strong></div>
+            <div class="pad-item" value="3"><strong>3</strong></div>
+            <div class="pad-item" value="4"><strong>4</strong></div>
+            <div class="pad-item" value="5"><strong>5</strong></div>
+            <div class="pad-item" value="6"><strong>6</strong></div>
+            <div class="pad-item" value="7"><strong>7</strong></div>
+            <div class="pad-item" value="8"><strong>8</strong></div>
+            <div class="pad-item" value="9"><strong>9</strong></div>
+            <div class="pad-item" value="10"><strong>10</strong></div>
+            <div class="pad-item" value="11"><strong>11</strong></div>
+            <div class="pad-item" value="12"><strong>12</strong></div>  
+            <div class="pad-item" value="13"><strong>13</strong></div>
+            <div class="pad-item" value="14"><strong>14</strong></div>
+            <div class="pad-item" value="15"><strong>15</strong></div>
+            <div class="pad-item" value="16"><strong>16</strong></div>
         </div>
 
         <div class="video"></div>
@@ -49,8 +49,8 @@
             <button type="button" class="forward"><strong>NEXT</strong></button>
             <button type="button" class="backward"><strong>BACK</strong></button>
             <button type="button" class="pause"><strong>PAUSE</strong></button>
-            <button type="button" class="save"><strong>SAVE</strong></button>
-            <button type="button" class="add"><strong>ADD</strong></button>
+            <!-- <button type="button" class="save"><strong>SAVE</strong></button> -->
+            <button type="button" class="add"><strong>ADD TO CART</strong></button>
         </div>
         
         <div class="footer">Programmed by Synthetic Studios&reg; 2024.</div>
