--- a/Synthetic Sound Demo/Pad Layout.html
+++ b/Synthetic Sound Demo/Pad Layout.html
@@ -44,13 +44,13 @@
         <div class="video"></div>
 
         <div class="pad-buttons">
-            <button type="button" class="play"><strong>PLAY</strong></button>
-            <button type="button" class="stop"><strong>STOP</strong></button>
-            <button type="button" class="forward"><strong>NEXT</strong></button>
-            <button type="button" class="backward"><strong>BACK</strong></button>
-            <button type="button" class="pause"><strong>PAUSE</strong></button>
+            <button type="button" class="play" title="Starts a sound demo."><strong>PLAY</strong></button>
+            <button type="button" class="stop" title="Stops the demo."><strong>STOP</strong></button>
+            <button type="button" class="forward" title="Go to next bank."><strong>NEXT</strong></button>
+            <button type="button" class="backward" title="Go to previous bank."><strong>BACK</strong></button>
+            <button type="button" class="pause" title="Pauses the demo."><strong>PAUSE</strong></button>
             <!-- <button type="button" class="save"><strong>SAVE</strong></button> -->
-            <button type="button" class="add"><strong>ADD TO CART</strong></button>
+            <button type="button" class="add" title="Add these sounds to your cart."><strong>ADD TO CART</strong></button>
         </div>
         
         <div class="footer">Programmed by Synthetic Studios&reg; 2024.</div>
