Figuring out the structure for the virtual credit card

--- a/Synthetic Sound Demo/Virtual Card.html
+++ b/Synthetic Sound Demo/Virtual Card.html
@@ -13,7 +13,11 @@
         <div class="title">
             <h2><span>Hello world!</span></h1>
         </div>
-        <div class="card"></div>
+        <div class="card">
+            <h3>VIRTUAL CREDIT</h3>
+            <p>0000 0000 0000 0000</p>
+            <h4>JOHN DOE</h4>
+        </div>
         <div class="balance"></div>
     </div>
     
